--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </nav>
         <div class="text-box">
             <h1> Recommended Movies </h1>
-            <p>Are you having a hard time finding a movie to watch <br> during your free time?
-                Well,  this is the <br> right  website for you! Enjoy! </p>
+            <p>Are you having a hard time finding a movie to watch during your free time?
+                Well,  this is the right  website for you! Enjoy! </p>
         </div>
         </section>
 
