--- a/Contact Us.html
+++ b/Contact Us.html
@@ -29,12 +29,16 @@
                         Monday - Friday 7 am - 1 pm PHT </p><br>
                     <h3> movies_official </h3>
                 </div>
+            </div>
+            <div class="row">
                 <div class="contact_us-column">
                     <h3> Send us EMAIL <i class="fa fa-envelope"></i> </h3>
                     <p> Typically reply time within a day or two <br>
                         Monday - Saturday 7 am - 10 pm PHT </p><br>
                     <h3> movies_official@gmail.com </h3>
                 </div>
+            </div>
+            <div class="row">
                 <div class="contact_us-column">
                     <h3> CALL <i class="fa fa-phone"></i> </h3>
                     <p> Monday - Friday 1 am - 3 pm PHT </p><br>
